Style issue fixed in mojix-tag

--- a/lib/mojix-components/src/components/mojix-tag/mojix-tag.scss
+++ b/lib/mojix-components/src/components/mojix-tag/mojix-tag.scss
@@ -5,6 +5,8 @@
     border-radius: 15px;
     text-align: center !important;
     width: max-content;
+    padding-left: 10px;
+    padding-right: 10px;
 
     .text {
       color: #FFF;
