Ionicons package updated

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="popular">
-      <ion-icon name="flame"></ion-icon>
+      <ion-icon name="flame-outline"></ion-icon>
       <ion-label>Popular</ion-label>
     </ion-tab-button>
 
