--- a/src/app/popular-movies/popular-movies.page.html
+++ b/src/app/popular-movies/popular-movies.page.html
@@ -5,11 +5,22 @@
 </ion-header>
 
 <ion-content padding>
- <mojix-movie-card
-    [name]="'asdfasdfasdf'"
-    [summary]="'A man foils an attempted murder, then flees the crew of would-be killers along with their intended target as a woman he just met tries to find him.'"
-    [genres]="['123', 'zzz']"
-    [posterUrl]="'https://image.tmdb.org/t/p/original//zMcEalkxEiRjvmijliLBk0sYern.jpg'"
-  >
-  </mojix-movie-card>
+  <ng-container *ngIf="movies.length > 0; then list; else empty">
+  </ng-container>
+  <ng-template #list>
+    <ion-list>
+      <ion-item *ngFor="let movie of movies">
+        <mojix-movie-card
+          [name]="movie.title"
+          [summary]="movie.overview"
+          [genres]="movie.genreIds"
+          [posterUrl]="movie.posterPath"
+        >
+        </mojix-movie-card>
+      </ion-item>
+    </ion-list>
+  </ng-template>
+  <ng-template #empty>
+    Omg no movies were found
+  </ng-template>
 </ion-content>
