--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,8 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-background-color: #141414;
+  --ion-toolbar-background: #141414;
   /** primary **/
   --ion-color-primary: #E50914;
   --ion-color-primary-rgb: 56, 128, 255;
@@ -153,7 +155,7 @@
    */
 
   .ios body {
-    --ion-background-color: #000000;
+    --ion-background-color: #141414;
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ffffff;
@@ -179,7 +181,7 @@
     --ion-color-step-900: #e6e6e6;
     --ion-color-step-950: #f2f2f2;
 
-    --ion-toolbar-background: #0d0d0d;
+    --ion-toolbar-background: #141414;
 
     --ion-item-background: #000000;
 
@@ -193,7 +195,7 @@
    */
 
   .md body {
-    --ion-background-color: #121212;
+    --ion-background-color: #141414;
     --ion-background-color-rgb: 18,18,18;
 
     --ion-text-color: #ffffff;
@@ -223,7 +225,7 @@
 
     --ion-item-background: #1e1e1e;
 
-    --ion-toolbar-background: #1f1f1f;
+    --ion-toolbar-background: #141414;
 
     --ion-tab-bar-background: #1f1f1f;
 
