--- a/src/app/popular-movies/popular-movies.page.html
+++ b/src/app/popular-movies/popular-movies.page.html
@@ -9,7 +9,7 @@
   </ng-container>
   <ng-template #list>
     <ion-list>
-      <ion-item *ngFor="let movie of movies">
+      <ion-item *ngFor="let movie of movies" (click)="navigateToDetails(movie)">
         <mojix-movie-card
           [name]="movie.title"
           [summary]="movie.overview"
