--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,6 +5,7 @@
 :root {
   --ion-background-color: #141414;
   --ion-toolbar-background: #141414;
+  --ion-text-color: #ffffff;
   /** primary **/
   --ion-color-primary: #E50914;
   --ion-color-primary-rgb: 56, 128, 255;
