--- a/src/app/movie-details/movie-details.page.scss
+++ b/src/app/movie-details/movie-details.page.scss
@@ -6,5 +6,14 @@ ion-content {
   .info {
     display: flex;
     flex-direction: column;
+
+    .movie-title {
+      font-size: 20px;
+    }
+
+    .genres {
+      display: flex;
+      flex-direction: row;
+    }
   }
 }
