Infinite scroll on popular movies

--- a/src/app/popular-movies/popular-movies.page.html
+++ b/src/app/popular-movies/popular-movies.page.html
@@ -19,6 +19,12 @@
         </mojix-movie-card>
       </ion-item>
     </ion-list>
+    <ion-infinite-scroll #infiniteScroll threshold="100px" (ionInfinite)="loadData($event)">
+      <ion-infinite-scroll-content
+        loadingSpinner="bubbles"
+        loadingText="Getting more movies">
+      </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
   </ng-template>
   <ng-template #empty>
     Omg no movies were found
