Caching for network requests

--- a/src/app/popular-movies/popular-movies.page.html
+++ b/src/app/popular-movies/popular-movies.page.html
@@ -13,7 +13,7 @@
         <mojix-movie-card
           [name]="movie.title"
           [summary]="movie.overview"
-          [genres]="movie.genreIds"
+          [genres]="getGenreNames(movie)"
           [posterUrl]="movie.posterPath"
         >
         </mojix-movie-card>
